cmake_minimum_required(VERSION 2.6)

project (tictacserver CXX)

set(TICTACSERVER_HEADERS tictacserver.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(TICTACSERVER_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(TICTACSERVER_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${TICTACSERVER_HEADERS})

CODEGEN_FILES(TICTACSERVER_CODEGEN_SOURCES ${TICTACSERVER_CODEGEN_DIR} ${TICTACSERVER_HEADERS})

add_custom_command(OUTPUT ${TICTACSERVER_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${TICTACSERVER_CODEGEN_DIR} -t service ${TICTACSERVER_HEADERS}
    DEPENDS ${TICTACSERVER_HEADERS_PATHS}
)

file(GLOB TICTACSERVER_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND TICTACSERVER_SOURCES ${TICTACSERVER_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR} $ENV{NGREST_EXT_INCLUDES})

add_library(tictacserver MODULE ${TICTACSERVER_SOURCES})

set_target_properties(tictacserver PROPERTIES PREFIX "")
set_target_properties(tictacserver PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(tictacserver ngrestutils ngrestcommon ngrestjson ngrestengine $ENV{NGREST_EXT_LIBS})
